--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
+    "next": "14.1.4",
+    "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-i18next": "^14.1.0"
   }
 }
