--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "next-i18next": "^15.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.1.0"
+    "react-i18next": "^14.1.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.0"
   }
 }
