--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "next-i18next": "^15.2.0",
     "react": "^18",
