--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.11",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
@@ -25,8 +27,14 @@
     "react-dom": "^18",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-i18next": "^14.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.0"
+    "swiper": "^11.1.4",
+    "tailwind-merge": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.14.8",
+    "typescript": "5.5.2"
   }
 }
